// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should create a batch message 1`] = `
Message {
  "_channel": "",
  "_type": "batch",
  "headers": Object {},
  "payload": Array [
    Message {
      "_channel": "channel",
      "_type": "text",
      "headers": Object {},
      "payload": undefined,
    },
  ],
}
`;

exports[`Should create a new message 1`] = `
Message {
  "_channel": "channel",
  "_type": "text",
  "headers": Object {
    "header-key": "value",
  },
  "payload": Object {
    "key": "value",
  },
}
`;

exports[`Should create a ping message 1`] = `
Message {
  "_channel": undefined,
  "_type": "ping",
  "headers": Object {},
  "payload": undefined,
}
`;

exports[`Should create a pong message 1`] = `
Message {
  "_channel": undefined,
  "_type": "pong",
  "headers": Object {},
  "payload": undefined,
}
`;

exports[`Should create a subscribe message 1`] = `
Message {
  "_channel": "",
  "_type": "subscribe",
  "headers": Object {},
  "payload": "channel",
}
`;

exports[`Should create a subscribe message 2`] = `
Message {
  "_channel": "",
  "_type": "subscribe",
  "headers": Object {},
  "payload": "channel,channel-2",
}
`;

exports[`Should create a text message 1`] = `
Message {
  "_channel": "channel",
  "_type": "text",
  "headers": Object {},
  "payload": "data",
}
`;

exports[`Should create an unsubscribe message 1`] = `
Message {
  "_channel": "",
  "_type": "unsubscribe",
  "headers": Object {},
  "payload": "channel",
}
`;

exports[`Should create an unsubscribe message 2`] = `
Message {
  "_channel": "",
  "_type": "unsubscribe",
  "headers": Object {},
  "payload": "channel,channel-2",
}
`;

exports[`Should encode message to string format 1`] = `
"text channel
header-key: header-value

payload"
`;

exports[`Should parse a string and create a new message 1`] = `
Message {
  "_channel": "channel",
  "_type": "text",
  "headers": Object {},
  "payload": "payload",
}
`;
